--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,14 @@
             "email": "fangzheng@kewo.com"
         }
     ],
-    "minimum-stability": "stable",
-    "require": {}
+    "minimum-stability": "",
+    "require": {
+        "php": ">=5.5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Kewo\\center\\": "src/"
+        },
+        "files": ["src/center.php"]
+    }
 }
