--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "kewo/center",
-    "description": "课课窝 管理中心",
+    "description": "课窝 管理中心",
     "type": "library",
     "license": "MIT",
     "authors": [
